--- a/index.html
+++ b/index.html
@@ -5,19 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Davidhallberg.GitHub.com by DavidHallberg</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+<!-- Om du får error med att det inte kan sparas, avmarkera filerna i mappen ...-->
   </head>
   <body>
+  <div class="header">
+    <li>
+      <p>one</p>
+      <p>two</p>
+      <p>three</p>
+      <p>four</p>
+      <p>five</p>
+    </li>
+  </div>
+
+    <div class="main">
+      <p>
+        center div
+      </p>
+
+    </div>
 
       <footer>
-        <p></p>
+        <p>footer</p>
       </footer>
-  
+
     <script src="javascripts/scale.fix.js"></script>
 
   </body>
