Added lobster font to navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Davidhallberg.GitHub.com by DavidHallberg</title>
 
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width">
 <!-- Om du får error med att det inte kan sparas, avmarkera filerna i mappen ...-->
   </head>
