--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <a href="#">Forum</a>
       </li>
     </ul>
+
+    <div class="verticalMenu">
+      <a href="#">Home</a>
+      <a href="#">About us</a>
+      <a href="#">Servers</a>
+      <a href="#">Forum</a>
+    </div>
+
     <div class="main">
           <h2>Header</h2>
           <p>
@@ -33,6 +41,19 @@
           </p>
     </div>
     <div class="main2">
+          <h2>Header</h2>
+          <p>
+          Lorem ipsum dolor sit amet, te vim vide nostrud qua
+          lisque, nulla simul ad sed. In mel vero epicuri mnesar
+          chum. Cibo noluisse an mei, ei eos graeci possit forensi
+          bus. Adipiscing persequeris his ei, sit te eligendi moder
+          atius constituam, no mei elitr ignota vocent. Ferri eloqu
+          entiam vel at. Lorem iisque referrentur pri te, tibique m
+          olestie sed id. Usu ut legere scripta incorrupte, id faci
+          lis adipiscing qui.
+          </p>
+    </div>
+    <div class="main3">
           <h2>Header</h2>
           <p>
           Lorem ipsum dolor sit amet, te vim vide nostrud qua
