--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <li><a href="#">Home</a></li>
         <li><a href="#">About us</a></li>
-        <li><a href="#">Servers</a></li>
+        <li><a href="jQuery/index.html">jQuery</a></li>
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">Forum&#9660;</a>
           <div class="dropdown-content" id="myDropdown">
